<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_container"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="false"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <HorizontalScrollView
        android:id="@+id/scroll_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_pizza"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settingsGeneralMargin"
                android:text="@string/chip_pizza" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_combo"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_combo" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sweets"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_sweets" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_drinks"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_drinks" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_bakery"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_bakery" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/bottomSheetDescriptionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_categories"
        tools:text="Two Clusters and a Comet" />

        <TextView
        android:id="@+id/bottomSheetDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomSheetDescriptionHeader"
        tools:text="This lovely starfield spans some four full moons (about 2 degrees)
        across the heroic northern constellation of Perseus. In telescopic exposures made
        during the nights of January 24, 26, and 28 it holds the famous pair of open or
        galactic star clusters h and Chi Persei with comet PanSTARRS (C/2017 T2) captured
        each night as it swept left to right across the field of view. Also cataloged as NGC
        869 (right) and NGC 884, both star clusters are about 7,000 light-years away and
        contain stars much younger and hotter than the Sun. Separated by only a few hundred
        light-years, the clusters are both 13 million years young based on the ages of their
        individual stars, evidence that they were likely a product of the same star-forming
        region. Discovered in 2017 while still beyond the orbit of Saturn, Comet PanSTARRs is
        a new visitor to the inner solar system and just over 13 light-minutes from planet
        Earth. Always a rewarding sight in binoculars, the Double Cluster is even visible to
        the unaided eye from dark locations. C/2017 T2 could remain a telescopic comet
        though. One of the brightest comets anticipated in 2020 it makes its closest approach
        to the Sun in early May.This lovely starfield spans some four full moons (about 2 degrees)
        across the heroic northern constellation of Perseus. In telescopic exposures made
        during the nights of January 24, 26, and 28 it holds the famous pair of open or
        galactic star clusters h and Chi Persei with comet PanSTARRS (C/2017 T2) captured
        each night as it swept left to right across the field of view. Also cataloged as NGC
        869 (right) and NGC 884, both star clusters are about 7,000 light-years away and
        contain stars much younger and hotter than the Sun. Separated by only a few hundred
        light-years, the clusters are both 13 million years young based on the ages of their
        individual stars, evidence that they were likely a product of the same star-forming
        region. Discovered in 2017 while still beyond the orbit of Saturn, Comet PanSTARRs is
        a new visitor to the inner solar system and just over 13 light-minutes from planet
        Earth. Always a rewarding sight in binoculars, the Double Cluster is even visible to
        the unaided eye from dark locations. C/2017 T2 could remain a telescopic comet
        though. One of the brightest comets anticipated in 2020 it makes its closest approach
        to the Sun in early May." />
    </androidx.constraintlayout.widget.ConstraintLayout>